[package]
name = "DFACE_rust_proj"
version = "0.1.0"
edition = "2024"




[dependencies]
thirtyfour = "0.36.1"

tokio = { version = "1.46.1", features = ["full"] }


ffuzzy = "0.3.16"

image_hasher = "3.0.0"

chrono = "0.4.41"

rusqlite = { version = "0.37.0", features = ["chrono"] }

image = "0.25.6"

base64 = "0.22.1"
serde_json = "1.0.140"